tests/test_proof/bad/output/prolala_motivating_example.catala_en.Proof
[ERROR] [Amount.amount] This variable might return an empty error:
  --> tests/test_proof/bad/prolala_motivating_example.catala_en
   | 
60 |   context amount content integer
   |           ^^^^^^
   + ProLaLa 2022 Super Cash Bonus
   +-+ Amount
The solver generated the following counterexample to explain the faulty behavior:
--> counterexamples disabled
[RESULT] [Amount.amount] No two exceptions to ever overlap for this variable
[RESULT] [Amount.correct_amount] This variable never returns an empty error
[RESULT] [Amount.correct_amount] No two exceptions to ever overlap for this variable
[RESULT] [Amount.eligibility.is_professor] No two exceptions to ever overlap for this variable
[RESULT] [Amount.eligibility.is_student] No two exceptions to ever overlap for this variable
[RESULT] [Amount.number_of_advisors] This variable never returns an empty error
[RESULT] [Amount.number_of_advisors] No two exceptions to ever overlap for this variable
[RESULT] [Amount.is_professor] This variable never returns an empty error
[RESULT] [Amount.is_professor] No two exceptions to ever overlap for this variable
[RESULT] [Amount.is_student] This variable never returns an empty error
[RESULT] [Amount.is_student] No two exceptions to ever overlap for this variable
[ERROR] [Eligibility.is_eligible] This variable might return an empty error:
  --> tests/test_proof/bad/prolala_motivating_example.catala_en
   | 
11 |   output is_eligible content boolean
   |          ^^^^^^^^^^^
   + ProLaLa 2022 Super Cash Bonus
   +-+ Eligibility
The solver generated the following counterexample to explain the faulty behavior:
--> counterexamples disabled
[ERROR] [Eligibility.is_eligible] At least two exceptions overlap for this variable:
  --> tests/test_proof/bad/prolala_motivating_example.catala_en
   | 
11 |   output is_eligible content boolean
   |          ^^^^^^^^^^^
   + ProLaLa 2022 Super Cash Bonus
   +-+ Eligibility
The solver generated the following counterexample to explain the faulty behavior:
--> counterexamples disabled
[RESULT] [Eligibility.is_eligible_correct] This variable never returns an empty error
[RESULT] [Eligibility.is_eligible_correct] No two exceptions to ever overlap for this variable
[RESULT] [Eligibility.is_professor] This variable never returns an empty error
[RESULT] [Eligibility.is_professor] No two exceptions to ever overlap for this variable
[RESULT] [Eligibility.is_student] This variable never returns an empty error
[RESULT] [Eligibility.is_student] No two exceptions to ever overlap for this variable
